--- a/HTML/07_sub_sup.html
+++ b/HTML/07_sub_sup.html
@@ -10,7 +10,7 @@
         <p>
             운향과 귤속 재배식물로, 1991년 일본에서 서지향(C. 'Nishinokaori')에 병감(C. reticulata var poonensis)의
             <br />
-            <em>꽃가루</em>를 교배해 <i>개발한</i> 만감류 품종이다
+            <em>꽃가루</em>를 교배해 <i>개발한</i> <sub>만감류</sub> <sup>품종이다</sup>
         </p>
 
         <blockquote>비타민이 풍부하다.</blockquote>
