--- a/HTML/24_a_href.html
+++ b/HTML/24_a_href.html
@@ -24,6 +24,10 @@
         </style>
     </head>
     <body>
+        <p><a href="order.html"> 주문서 작성하기</a></p>
+        <p>
+            <a href="order.html" target="_blank"> <img src="../images/tangerines.jpg" alt="레드 향" /></a>
+        </p>
         <div id="container">
             <h2>블루베리 샐러드 레시피</h2>
             <p><b>재료: </b> 블루베리 2줌, 양상추 3장, 작은 상추 1줌, 양베추 2장, 당근채 약간</p>
