--- a/HTML/question/index.html
+++ b/HTML/question/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>탐라국 입춘굿</title>
 
         <style>
             #container {
@@ -33,10 +33,18 @@
                 탐라국 입춘굿놀이는 전국적으로 유일하게 입춘날 벌어지는 축제이자 제주도의 문화축제 중에서 유일하게
                 전통시대부터 존재했던 축제이다.
             </p>
+
             <br />
 
             제주에서 입춘은 새철 드는 날. <br />
             신구간이 끝나 하늘의 1만 8000신이 지상으로 내려와 새해 일들을 시작하는 때다.
+
+            <p>
+                <a href="https://www.visitjeju.net/kr/detail/view?contentsid=CNTS_000000000021917" target="_blank"
+                    >자세한 정보 보기</a
+                >
+            </p>
+            <video src="../../medias/flower.mp4" muted autoplay loop controls width="1000"></video>
 
             <h2>일정</h2>
             <ul>
