--- a/ResponsiveWeb/09_flex_7.html
+++ b/ResponsiveWeb/09_flex_7.html
@@ -6,18 +6,19 @@
         <title>Document</title>
         <style>
             .container {
-                width: 700px;
+                width: 200px;
+                height: 150px;
                 display: flex; /*플렉서블 박스 컨테이너 레이아웃 = 플렉스 레이아웃*/
+                flex-flow: row wrap;
+                background-color: #eee;
                 border: 1px solid #222;
-                margin-bottom: 30px;
-                height: 250px;
+                margin: 30px;
             }
 
             .box {
-                padding: 5px 45px;
-                margin: 5px;
                 width: 80px;
                 background-color: #222;
+                border: 1px dotted #e9e9e9;
             }
             p {
                 color: #fff;
@@ -25,21 +26,26 @@
                 font-weight: bold;
             }
 
-            /*교차축의 시작 지점 간격 정렬*/
+            /*
+                주축에서 줄바꿈이 되어 여러 줄로 표현될 때 교차축의 항목간의 간격 지정
+            */
             #opt1 {
-                align-items: flex-start;
+                align-content: flex-start;
             }
             #opt2 {
-                align-items: flex-end;
+                align-content: flex-end;
             }
             #opt3 {
-                align-items: center;
+                align-content: center;
             }
             #opt4 {
-                align-items: baseline;
+                align-content: space-between;
             }
             #opt5 {
-                align-items: stretch;
+                align-content: space-around;
+            }
+            #opt6 {
+                align-content: stretch;
             }
         </style>
     </head>
@@ -63,12 +69,18 @@
             <div class="box"><p>4</p></div>
         </div>
         <div class="container" id="opt4">
-            <div class="box"><p style="font-size: 14px">1</p></div>
-            <div class="box"><p style="font-size: 14px">2</p></div>
-            <div class="box"><p style="font-size: 30px">3</p></div>
-            <div class="box"><p style="font-size: 14px">4</p></div>
+            <div class="box"><p>1</p></div>
+            <div class="box"><p>2</p></div>
+            <div class="box"><p>3</p></div>
+            <div class="box"><p>4</p></div>
         </div>
         <div class="container" id="opt5">
+            <div class="box"><p>1</p></div>
+            <div class="box"><p>2</p></div>
+            <div class="box"><p>3</p></div>
+            <div class="box"><p>4</p></div>
+        </div>
+        <div class="container" id="opt6">
             <div class="box"><p>1</p></div>
             <div class="box"><p>2</p></div>
             <div class="box"><p>3</p></div>
