--- a/ResponsiveWeb/WCBcafe/02/news.html
+++ b/ResponsiveWeb/WCBcafe/02/news.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>WCB Cafe</title>
+        <title>WCB Cafe - NEWS</title>
 
         <link rel="icon" type="image/png" href="../../../siteimages/favicon.png" />
 
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <div class="big-bg" id="home">
+        <div class="big-bg" id="news">
             <header class="page-header wrapper">
                 <h1>
                     <a href="index.html"> <img src="../../../siteimages/logo.svg" alt="WCB 카페 홈" class="logo" /></a>
@@ -36,13 +36,19 @@
                 </nav>
             </header>
 
-            <div class="home-content wrapper">
-                <h2 class="page-title">We'll Make Your Day</h2>
-                <p>멋진 카페이서 힐링 시간을 가지세요. 첨가물을 넣지 않은 재료로 건강한 음식을 만듭니다.</p>
-                <a href="memu.html" class="button">메뉴 보기</a>
+            <div class="wrapper">
+                <h2 class="page-title">News</h2>
             </div>
-            <!-- /.home-content -->
         </div>
-        <!-- /#home -->
+        <div class="news-contents wrapper">
+            <article>메인 영역 부분</article>
+            <aside>사이드 바 부분</aside>
+        </div>
+
+        <footer>
+            <div class="wrapper">
+                <p><small>&copy; 2024 NaturalDesign</small></p>
+            </div>
+        </footer>
     </body>
 </html>
